--- a/server/templates/history.html
+++ b/server/templates/history.html
@@ -6,7 +6,7 @@
     <header class="ant-layout-header">
         <h1 class="logo">Posture Analytics</h1>
         <div class="header-actions">
-            <a href="/" class="floating-button primary">
+            <a href="/server/static" class="floating-button primary">
                 <i class="fas fa-arrow-left"></i>
                 Back to Live Feed
             </a>
