renamed sub projects

--- a/hip_posture_recognition/templates/error.html
+++ b/hip_posture_recognition/templates/error.html
@@ -4,7 +4,7 @@
 <div class="ant-layout">
     <header class="ant-layout-header">
         <h1 class="logo">Error</h1>
-        <a href="/server/static" class="back-button">
+        <a href="/hip_posture_recognition/static" class="back-button">
             <i class="fas fa-arrow-left"></i>
             Back to Dashboard
         </a>
