--- a/hip_posture_recognition/templates/history.html
+++ b/hip_posture_recognition/templates/history.html
@@ -6,7 +6,7 @@
     <header class="ant-layout-header">
         <h1 class="logo">Posture Analytics</h1>
         <div class="header-actions">
-            <a href="/server/static" class="floating-button primary">
+            <a href="/hip_posture_recognition/static" class="floating-button primary">
                 <i class="fas fa-arrow-left"></i>
                 Back to Live Feed
             </a>
